@@ -54,7 +54,7 @@ class SimpleParameterList implements ParameterList {
 
     public void setLiteralParameter(int index, String value, int oid) throws SQLException {
         if (index < 1 || index > paramValues.length)
-            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{new Integer(index), new Integer(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
+            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{Integer.valueOf(index), Integer.valueOf(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
 
         paramValues[index - 1] = value;
     }
@@ -73,21 +73,21 @@ class SimpleParameterList implements ParameterList {
 
     public void setBytea(int index, byte[] data, int offset, int length) throws SQLException {
         if (index < 1 || index > paramValues.length)
-            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{new Integer(index), new Integer(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
+            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{Integer.valueOf(index), Integer.valueOf(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
 
         paramValues[index - 1] = new StreamWrapper(data, offset, length);
     }
 
     public void setBytea(int index, final InputStream stream, final int length) throws SQLException {
         if (index < 1 || index > paramValues.length)
-            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{new Integer(index), new Integer(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
+            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{Integer.valueOf(index), Integer.valueOf(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
 
         paramValues[index - 1] = new StreamWrapper(stream, length);
     }
 
     public void setNull(int index, int oid) throws SQLException {
         if (index < 1 || index > paramValues.length)
-            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{new Integer(index), new Integer(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
+            throw new PSQLException(GT.tr("The column index is out of range: {0}, number of columns: {1}.", new Object[]{Integer.valueOf(index), Integer.valueOf(paramValues.length)}), PSQLState.INVALID_PARAMETER_VALUE );
 
         paramValues[index - 1] = NULL_OBJECT;
     }
@@ -152,7 +152,7 @@ class SimpleParameterList implements ParameterList {
         for (int i = 0; i < paramValues.length; i++)
         {
             if (paramValues[i] == null)
-                throw new PSQLException(GT.tr("No value specified for parameter {0}.", new Integer(i + 1)), PSQLState.INVALID_PARAMETER_VALUE);
+                throw new PSQLException(GT.tr("No value specified for parameter {0}.", Integer.valueOf(i + 1)), PSQLState.INVALID_PARAMETER_VALUE);
         }
     }
 
