@@ -530,9 +530,9 @@ public class PreparedStatementTest extends TestCase
         pstmt.executeUpdate();
         pstmt.close();
         
-        Integer maxInteger= new Integer(2147483647), minInteger = new Integer(-2147483648);
+        Integer maxInteger= Integer.valueOf(2147483647), minInteger = Integer.valueOf(-2147483648);
         
-        Double maxFloat=new Double( 2147483647), minFloat = new Double( -2147483648 );
+        Double maxFloat= Double.valueOf( 2147483647), minFloat = Double.valueOf( -2147483648 );
         
         pstmt = conn.prepareStatement( "insert into float_tab values (?,?,?)");
         pstmt.setObject(1,maxInteger,Types.FLOAT );
@@ -560,7 +560,7 @@ public class PreparedStatementTest extends TestCase
         pstmt.close();
         
         String maxStringFloat = new String("1.0E37"), minStringFloat = new String("1.0E-37");
-        Double maxFloat=new Double(1.0E37), minFloat = new Double( 1.0E-37 );
+        Double maxFloat= Double.valueOf(1.0E37), minFloat = Double.valueOf( 1.0E-37 );
         
         pstmt = conn.prepareStatement( "insert into float_tab values (?,?,?)");
         pstmt.setObject(1,maxStringFloat,Types.FLOAT );
@@ -589,7 +589,7 @@ public class PreparedStatementTest extends TestCase
         pstmt.close();
         
         BigDecimal maxBigDecimalFloat = new BigDecimal("1.0E37"), minBigDecimalFloat = new BigDecimal("1.0E-37");
-        Double maxFloat=new Double(1.0E37), minFloat = new Double( 1.0E-37 );
+        Double maxFloat=Double.valueOf(1.0E37), minFloat = Double.valueOf( 1.0E-37 );
         
         pstmt = conn.prepareStatement( "insert into float_tab values (?,?,?)");
         pstmt.setObject(1,maxBigDecimalFloat,Types.FLOAT );
@@ -616,8 +616,8 @@ public class PreparedStatementTest extends TestCase
         pstmt.executeUpdate();
         pstmt.close();
         
-        Integer maxInt = new Integer( 127 ), minInt = new Integer(-127);
-        Float maxIntFloat = new Float( 127 ), minIntFloat = new Float( -127 ); 
+        Integer maxInt = Integer.valueOf( 127 ), minInt = Integer.valueOf(-127);
+        Float maxIntFloat = Float.valueOf( 127 ), minIntFloat = Float.valueOf( -127 ); 
         
         pstmt = conn.prepareStatement( "insert into tiny_int values (?,?,?)");
         pstmt.setObject(1,maxIntFloat,Types.TINYINT );
@@ -645,8 +645,8 @@ public class PreparedStatementTest extends TestCase
         pstmt.executeUpdate();
         pstmt.close();
         
-        Integer maxInt = new Integer( 32767 ), minInt = new Integer(-32768);
-        Float maxIntFloat = new Float( 32767 ), minIntFloat = new Float( -32768 ); 
+        Integer maxInt = Integer.valueOf( 32767 ), minInt = Integer.valueOf(-32768);
+        Float maxIntFloat = Float.valueOf( 32767 ), minIntFloat = Float.valueOf( -32768 ); 
         
         pstmt = conn.prepareStatement( "insert into small_int values (?,?,?)");
         pstmt.setObject(1,maxIntFloat,Types.SMALLINT );
@@ -673,8 +673,8 @@ public class PreparedStatementTest extends TestCase
         pstmt.executeUpdate();
         pstmt.close();
         
-        Integer maxInt = new Integer( 1000 ), minInt = new Integer(-1000);
-        Float maxIntFloat = new Float( 1000 ), minIntFloat = new Float( -1000 ); 
+        Integer maxInt = Integer.valueOf( 1000 ), minInt = Integer.valueOf(-1000);
+        Float maxIntFloat = Float.valueOf( 1000 ), minIntFloat = Float.valueOf( -1000 ); 
         
         pstmt = conn.prepareStatement( "insert into int_tab values (?,?,?)");
         pstmt.setObject(1,maxIntFloat,Types.INTEGER );
@@ -702,7 +702,7 @@ public class PreparedStatementTest extends TestCase
         pstmt.close();
         
         Boolean trueVal = Boolean.TRUE, falseVal = Boolean.FALSE;
-        Double dBooleanTrue = new Double(1), dBooleanFalse = new Double( 0 ); 
+        Double dBooleanTrue = Double.valueOf(1), dBooleanFalse = Double.valueOf( 0 ); 
         
         pstmt = conn.prepareStatement( "insert into double_tab values (?,?,?)");
         pstmt.setObject(1,trueVal,Types.DOUBLE );
@@ -805,7 +805,7 @@ public class PreparedStatementTest extends TestCase
     public void testSetObjectCharacter() throws SQLException
     {
         PreparedStatement ps = conn.prepareStatement("INSERT INTO texttable(te) VALUES (?)");
-        ps.setObject(1, new Character('z'));
+        ps.setObject(1, Character.valueOf('z'));
         ps.executeUpdate();
         ps.close();
     }
@@ -819,7 +819,7 @@ public class PreparedStatementTest extends TestCase
     public void testStatementDescribe() throws SQLException
     {
         PreparedStatement pstmt = conn.prepareStatement("SELECT ?::int");
-        pstmt.setObject(1, new Integer(2), Types.OTHER);
+        pstmt.setObject(1, Integer.valueOf(2), Types.OTHER);
         for (int i=0; i<10; i++) {
             ResultSet rs = pstmt.executeQuery();
             assertTrue(rs.next());
